--- a/src/components/AfterBuy/AfterBuy.css
+++ b/src/components/AfterBuy/AfterBuy.css
@@ -1,4 +1,43 @@
+.table {
+    border: 1px solid black;
+    background-color: rgb(1, 1, 43);
+    color: wheat;
+}
+
+.stocks {
+    width: min-content;
+    margin: auto;
+}
 
 .coins {
     margin-left: 970px;
 }
+
+.AfterBuy {
+    background-color: rgb(1, 1, 43);
+    color: azure;
+    margin: 45px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 30px;
+    box-shadow: 10px 14px 5px rgba(18, 27, 95, 0.411);
+    width: max-content;
+}
+
+.buttons {
+    background-color: blanchedalmond;
+    font-weight: bold;
+    border-radius: 10px;
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
+.buttons:hover {
+    background-color: whitesmoke;
+}
+
+.GA {
+    float: left;
+    margin-right: 250px;
+}
+
